# events_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/events/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
project/events/migrations/: 0001_initial.py
project/project/: celery.py  settings.py  urls.py
project/users/: serializers.py  urls.py  views.py
